<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <TextView
        android:id="@+id/forage_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/forage_name"/>
    <ImageView
        android:id="@+id/forage_detail_location_icon"
        android:layout_width="wrap_content"
        android:src="@drawable/location_icon_grey"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/forage_detail_location"
        app:layout_constraintBottom_toBottomOf="@id/forage_detail_location"
        />
    <TextView
        android:id="@+id/forage_detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintLeft_toRightOf="@id/forage_detail_location_icon"
        app:layout_constraintTop_toBottomOf="@id/forage_detail_name"
        tools:text="@string/forage_location"/>

    <ImageView
        android:id="@+id/forage_detail_inseason_icon"
        android:layout_width="wrap_content"
        android:src="@drawable/calendar_month_icon_grey"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/forage_detail_inseason"
        app:layout_constraintBottom_toBottomOf="@id/forage_detail_inseason"
        />
    <TextView
        android:id="@+id/forage_detail_inseason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintLeft_toRightOf="@id/forage_detail_inseason_icon"
        app:layout_constraintTop_toBottomOf="@id/forage_detail_location"
        tools:text="@string/in_season"/>
    <ImageView
        android:id="@+id/forage_detail_note_icon"
        android:layout_width="wrap_content"
        android:src="@drawable/notes_icon_grey"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/forage_detail_note"
        app:layout_constraintBottom_toBottomOf="@id/forage_detail_note"
        />
    <TextView
        android:id="@+id/forage_detail_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintLeft_toRightOf="@id/forage_detail_note_icon"
        app:layout_constraintTop_toBottomOf="@id/forage_detail_inseason"
        tools:text="@string/note"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/forage_detail_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/edit_icon_white_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.constraintlayout.widget.ConstraintLayout>